syntax = "proto3";

package viammodules.service.videostore.v1;

option go_package = "./videostore-api";

service videostoreService {
  rpc FetchStream(FetchStreamRequest) returns (stream FetchStreamResponse);
  // Unary fetch between [from, to]
  rpc Fetch(FetchRequest) returns (FetchResponse);
  // Unary save between [from, to]
  rpc Save(SaveRequest) returns (SaveResponse);
}

message FetchStreamRequest {
  string name = 1;
  // Date-time in format YYYY-MM-DD_HH-MM-SS
  string from = 2;
  // Date-time in format YYYY-MM-DD_HH-MM-SS
  string to = 3;
}

message FetchStreamResponse {
  bytes video_data = 1;
}

message FetchRequest {
  string name = 1;
  // Date-time in format YYYY-MM-DD_HH-MM-SS
  string from = 2;
  // Date-time in format YYYY-MM-DD_HH-MM-SS
  string to = 3;
}

message FetchResponse {
  // Raw video bytes for the requested interval
  bytes video_data = 1;
}

message SaveRequest {
  string name = 1;
  // Date-time in format YYYY-MM-DD_HH-MM-SS
  string from = 2;
  // Date-time in format YYYY-MM-DD_HH-MM-SS
  string to = 3;
}

message SaveResponse {
  // Filename (or identifier) of the saved artifact
  string filename = 1;
}
